--- a/public/index.html
+++ b/public/index.html
@@ -17,43 +17,58 @@
     <canvas id="myChart" width="400" height="400"></canvas>
 </main>
 <script>
-  var ctx = document.getElementById("myChart");
-  var myChart = new Chart(ctx, {
-    type: 'bar',
-    data: {
-      labels: ["Henry", "Stenver", "Karoliina", "Jaagup"],
-      datasets: [{
-        label: 'Niiskuse tase',
-        data: [12, 19, 3, 5],
-        backgroundColor: [
-          'rgba(255, 99, 132, 0.2)',
-          'rgba(54, 162, 235, 0.2)',
-          'rgba(255, 206, 86, 0.2)',
-          'rgba(75, 192, 192, 0.2)',
-          'rgba(153, 102, 255, 0.2)',
-          'rgba(255, 159, 64, 0.2)'
-        ],
-        borderColor: [
-          'rgba(255,99,132,1)',
-          'rgba(54, 162, 235, 1)',
-          'rgba(255, 206, 86, 1)',
-          'rgba(75, 192, 192, 1)',
-          'rgba(153, 102, 255, 1)',
-          'rgba(255, 159, 64, 1)'
-        ],
-        borderWidth: 1
-      }]
-    },
-    options: {
-      scales: {
-        yAxes: [{
-          ticks: {
-            beginAtZero:true
+  const ctx = document.getElementById("myChart");
+
+  window.onload = () => {
+    fetch("/api/getAverage")
+      .then(res => res.json())
+      .then(res => {
+        console.log(res)
+
+        let labels = res.avg.map(x => x._id)
+        let moisture = res.avg.map(x => x.avgMoisture)
+
+        let data =  {
+          labels: labels,
+            datasets: [{
+            label: 'Niiskuse tase',
+            data: moisture,
+            backgroundColor: [
+              'rgba(255, 99, 132, 0.2)',
+              'rgba(54, 162, 235, 0.2)',
+              'rgba(255, 206, 86, 0.2)',
+              'rgba(75, 192, 192, 0.2)',
+              'rgba(153, 102, 255, 0.2)',
+              'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+              'rgba(255,99,132,1)',
+              'rgba(54, 162, 235, 1)',
+              'rgba(255, 206, 86, 1)',
+              'rgba(75, 192, 192, 1)',
+              'rgba(153, 102, 255, 1)',
+              'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+          }]
+        }
+
+        let myChart = new Chart(ctx, {
+          type: 'bar',
+          data: data,
+          options: {
+            maintainAspectRatio: false,
+            scales: {
+              yAxes: [{
+                ticks: {
+                  beginAtZero:true
+                }
+              }]
+            }
           }
-        }]
-      }
-    }
-  });
+        });
+      })
+  }
 </script>
 </body>
 </html>
