--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="tab-pane fade" id="nav-top" role="tabpanel" aria-labelledby="nav-top-tab">
             <div>
-                <div class="table-responsive-sm">
+                <div class="table-responsive-sm" id="leaderTable">
                     <table class="table">
                         <tbody id="leaderBoard">
                         </tbody>
